podcast: ensure the subscribe button is insensitive after subscribing

gtk_tree_selection_unselect_all doesn't emit selection-changed when
the model is empty, so we can't rely on that to make the button
insensitive.  If there was only one feed, the subscribe button
would remain sensitive, and clicking it would cause a crash.

https://bugzilla.gnome.org/show_bug.cgi?id=697267